--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,4 +16,9 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint
-        run: npm run eslint
+        run: npm run eslin
+      - name: build
+        run: npm build
+      - name: test
+        run: npm test
+	
