--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,7 +16,7 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint
-        run: npm run eslin
+        run: npm run eslint
       - name: build
         run: npm build
       - name: test
